--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">FindMyPackage</string>
     <string name="carrier_name">택배사 이름</string>
-    <string name="post_num">운송장 번호</string>
-    <string name="post_track">운송장 조회</string>
-    <string name="msg_post_empty">운송장 번호를 입력해주세요.</string>
+    <string name="track_id">운송장 번호</string>
+    <string name="track_search">운송장 조회</string>
+    <string name="msg_track_id_empty">운송장 번호를 입력해주세요.</string>
     <string name="msg_carrier_empty">조회 하실 택배사를 선택해주세요.</string>
     <string name="unknown_item">알 수 없는 물건</string>
     <string name="empty_track_list">저장 된 운송장 번호가 없습니다.</string>
