--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">FindMyPackage</string>
     <string name="carrier_name">택배사 이름</string>
+    <string name="item_name">상품 이름</string>
     <string name="track_id">운송장 번호</string>
     <string name="track_search">운송장 조회</string>
     <string name="msg_track_id_empty">운송장 번호를 입력해주세요.</string>
