--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,15 @@
     <string name="item_name">상품 이름</string>
     <string name="track_id">운송장 번호</string>
     <string name="track_search">운송장 조회</string>
+    <string name="unknown_item">알 수 없는 물건</string>
+    <string name="now_status">현재 상태</string>
+    <string name="time">시간</string>
+    <string name="location">위치</string>
+    <string name="description">상세 설명</string>
+
+
     <string name="msg_track_id_empty">운송장 번호를 입력해주세요.</string>
     <string name="msg_carrier_empty">조회 하실 택배사를 선택해주세요.</string>
-    <string name="unknown_item">알 수 없는 물건</string>
     <string name="empty_track_list">저장 된 운송장 번호가 없습니다.</string>
+    <string name="empty_progress_list">운송 정보를 가져오는 중입니다.</string>
 </resources>
