- Implementation: Copy TrackId on Touch

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="msg_network_error">존재하지 않는 운송장 번호거나, 네트워크 오류가 발생했습니다.</string>
     <string name="empty_track_list">저장 된 운송장 번호가 없습니다.</string>
     <string name="empty_progress_list">운송 정보를 가져오는 중입니다.</string>
+    <string name="msg_copy_complete">%s 을 복사했어요.</string>
 </resources>
