--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,17 @@
     <string name="now_status_empty">현재 상태 알 수 없음</string>
     <string name="recent_time_empty">최근 갱신 시간 알 수 없음</string>
 
+    <!--    다이얼로그    -->
+    <string name="dialog_submit">저장</string>
+    <string name="dialog_cancel">취소</string>
+
+    <string name="dialog_name_change_title">운송장 이름 변경</string>
+    <string name="dialog_name_change_msg">저장을 누르시면 상품의 이름을 아래와 같이 변경해요.</string>
+    <string name="dialog_name_change_toast_done">변경되었어요.</string>
+    <string name="dialog_name_change_toast_fail">변경에 실패했어요.</string>
+
+
+    <!--    메세지    -->
     <string name="msg_track_id_empty">운송장 번호를 입력해주세요.</string>
     <string name="msg_carrier_empty">조회 하실 택배사를 선택해주세요.</string>
     <string name="msg_network_error">존재하지 않는 운송장 번호거나, 네트워크 오류가 발생했습니다.</string>
