--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,11 @@
     <string name="now_status_empty">현재 상태 알 수 없음</string>
     <string name="recent_time_empty">최근 갱신 시간 알 수 없음</string>
 
+    <string name="notification_access">알림 접근 허용</string>
+
     <!--    다이얼로그    -->
+    <string name="confirm">확인</string>
+    <string name="cancel">취소</string>
     <string name="dialog_submit">저장</string>
     <string name="dialog_cancel">취소</string>
 
@@ -25,7 +29,7 @@
     <string name="dialog_name_change_toast_fail">변경에 실패했어요.</string>
 
     <string name="dialog_noti_allow_help">위와 같은 팝업이 나오면, 앱의 알림 접근 권한을 조정해주세요.</string>
-
+    
     <!--    메세지    -->
     <string name="msg_track_id_empty">운송장 번호를 입력해주세요.</string>
     <string name="msg_carrier_empty">조회 하실 택배사를 선택해주세요.</string>
