--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="notification_access">알림 접근 허용</string>
     <string name="get_notification">운송장 자동 등록 시 알림 수신</string>
 
+    <string name="app_info">앱 정보</string>
+
     <!--    다이얼로그    -->
     <string name="confirm">확인</string>
     <string name="cancel">취소</string>
