--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="recent_time_empty">최근 갱신 시간 알 수 없음</string>
 
     <string name="notification">알림</string>
-    <string name="notification_access">알림 접근 허용</string>
+    <string name="notification_access">알림으로 운송장 자동 등록</string>
     <string name="get_notification">운송장 자동 등록 시 알림 수신</string>
 
     <string name="app_info">앱 정보</string>
@@ -37,8 +37,7 @@
 
     <string name="dialog_parcel_not_found">택배를 조회할 수 없어요.\n 인터넷 오류일 수도 있지만, 잘못 인식된 운송장 번호가 자동 등록되었을 수도 있어요.\n이 택배를 삭제할까요?</string>
 
-    <string name="dialog_allow_noti_help_first">운송장번호를 자동으로 등록하기 위해 앱의 알림 접근 권한을 허용해주세요.\n\n앱은 절대 운송장, 물건명 외의 정보에 접근하거나 정보를 기기 밖으로 전달하지 않아요.</string>
-    <string name="dialog_allow_noti_help_allow">위와 같은 팝업이 나오면, 앱의 알림 접근 권한을 허용으로 조정해 주세요.\n\n앱은 절대 운송장, 물건명 외의 정보에 접근하거나 정보를 기기 밖으로 전달하지 않아요.</string>
+    <string name="dialog_allow_noti_help_allow">운송장번호를 자동으로 등록하기 위해 앱의 알림 접근 권한을 허용해주세요.\n\n앱은 절대 운송장, 물건명 외의 정보에 접근하거나 정보를 기기 밖으로 전달하지 않아요.</string>
     <string name="dialog_allow_noti_help_reject">위와 같은 팝업이 나오면, 앱의 알림 접근 권한을 허용 안 됨으로 조정해 주세요.\n\n더 이상 운송장 번호를 자동으로 등록하지 않아요.</string>
     <string name="dialog_get_noti_help_allow">운송장이 자동으로 등록 될 때, 알림으로 안내드려요.</string>
     <string name="dialog_get_noti_help_reject">운송장이 자동으로 등록 될 때, 더 이상 알림으로 안내드리지 않아요.</string>
