--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,11 @@
     <string name="get_notification">운송장 자동 등록 시 알림 수신</string>
     <string name="notification_catch_fail">앱이 알림을 인식하지 못하나요?</string>
 
+    <string name="manage_parcel">운송장 관리</string>
+    <string name="parcel_auto_refresh">운송장 자동 새로고침</string>
+    <string name="auto_refresh_term">자동 새로고침 주기</string>
+
+
     <string name="app_info">앱 정보</string>
 
     <!--    다이얼로그    -->
