--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
 
     <string name="manage_parcel">운송장 관리</string>
     <string name="parcel_auto_refresh">운송장 자동 새로고침</string>
-    <string name="auto_refresh_term">자동 새로고침 주기</string>
+    <string name="auto_refresh_period">자동 새로고침 주기</string>
 
 
     <string name="app_info">앱 정보</string>
