--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="confirm">확인</string>
     <string name="cancel">취소</string>
     <string name="denied">거부</string>
+    <string name="next">다음</string>
     <string name="dialog_submit">저장</string>
     <string name="dialog_cancel">취소</string>
 
@@ -52,6 +53,11 @@
     <string name="dialog_get_noti_help_allow">운송장이 자동으로 등록 될 때, 알림으로 안내드려요.</string>
     <string name="dialog_get_noti_help_reject">운송장이 자동으로 등록 될 때, 더 이상 알림으로 안내드리지 않아요.</string>
     <string name="dialog_start_noti_fail_form">알림에 택배사 이름과, 운송장 번호가 있어야지 앱이 알림을 인식 할 수 있어요.\n\n그럼에도 인식하지 못한다면, 인식하지 못하는 알림메세지를 개발자에게 전달해서 함께 앱을 개선할 수 있어요.\n\n개발자에게 알림을 공유하시겠어요?</string>
+
+    <string name="tutorial_msg_1">여기에선 운송장 정보를 직접 입력해서 수동으로 추가할 수 있어요.</string>
+    <string name="tutorial_msg_2">여기에선 앱이 알림으로 운송장을 등록할지, 자동으로 새로고침 할 지 설정할 수 있어요.</string>
+    <string name="tutorial_msg_3">여기에는 내 운송장들의 정보가 나열되어 있어요.</string>
+
 
     <!--    메세지    -->
     <string name="msg_track_id_empty">운송장 번호를 입력해 주세요.</string>
