--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,14 @@
     <string name="toast_back_button">한 번 더 눌러서 앱을 종료해요.</string>
     <string name="toast_parcel_delete_done">운송장 번호를 삭제했어요.</string>
 
+
+    <!--    ContentDescription    -->
+    <string name="desc_tutorial">앱 사용 방법에 대한 간단한 안내를 확인할 수 있어요.</string>
+    <string name="desc_setting">앱 설정을 변경 할 수 있어요.</string>
+    <string name="desc_parcel_add">운송장을 추가할 수 있는 화면으로 이동할 수 있어요.</string>
+    <string name="desc_noti_permission">기기가 수신하는 알림을 분석하여 운송장을 자동으로 등록할 수 있게 허용해요. 이 기능을 사용하기 위해서는 관련 권한을 허용해야 해요.</string>
+    <string name="desc_noti_get">운송장이 알림을 통해 자동으로 등록 될 때 알림을 수신할 지 여부를 정할 수 있어요.</string>
+    <string name="desc_noti_fail">인식하지 못하는 알림이 있으면 해당 정보를 개발자에게 공유하여 인식할 수 있도록 앱을 개선할 수 있어요.</string>
+    <string name="desc_auto_refresh">운송장을 일정 시간마다 자동으로 새로고침 할 지 여부를 설정할 수 있어요.</string>
+
 </resources>
