--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">택배ㅇㄷ?</string>
 
-    <string name="carrier_name">OO택배</string>
+    <string name="carrier_name">택배사 이름</string>
     <string name="item_name">상품 이름</string>
     <string name="track_id">운송장 번호</string>
     <string name="track_add">운송장 추가</string>
