- Modified: Categorized by message error code in case of error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,10 +61,14 @@
 
 
     <!--    메세지    -->
+    <string name="error_default">[%d] %s</string>
+
     <string name="msg_track_id_empty">운송장 번호를 입력해 주세요.</string>
     <string name="msg_carrier_empty">조회 하실 택배사를 선택해 주세요.</string>
-    <string name="msg_not_exist_network_error">존재하지 않는 운송장 번호거나, 네트워크 오류가 발생했어요.</string>
+    <string name="msg_percel_not_exist_error">유효하지 않은 운송장 번호에요.</string>
+    <string name="msg_carrier_network_error">서버 문제로 택배사와 통신할 수 없어요.</string>
     <string name="msg_network_error">네트워크 오류가 발생했어요.</string>
+    <string name="msg_refresh_error">%s(%s)를 새로고침 하지 못했어요.</string>
     <string name="msg_copy_complete">%s 을 복사했어요.</string>
     <string name="msg_copy_complete_temp">운송장 번호가 복사됐어요.</string>
     <string name="msg_empty_track_list">저장된 운송장 번호가 없어요.</string>
