--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,13 +15,14 @@
     <string name="now_status_empty">현재 상태 알 수 없음</string>
     <string name="recent_time_empty">최근 갱신 시간 알 수 없음</string>
 
-    <string name="notification">알림</string>
+    <string name="auto_register">자동 등록</string>
     <string name="notification_access">알림으로 운송장 자동 등록</string>
-    <string name="get_notification">운송장 자동 등록 시 알림 수신</string>
+    <string name="receive_noti">운송장 자동 등록 시 알림 수신</string>
     <string name="notification_catch_fail">앱이 알림을 인식하지 못하나요?</string>
 
-    <string name="manage_parcel">운송장 관리</string>
+    <string name="auto_refresh">자동 새로고침</string>
     <string name="parcel_auto_refresh">운송장 자동 새로고침</string>
+    <string name="parcel_refresh_receive_noti">운송장 새로고침 시 알림 수신</string>
     <string name="auto_refresh_period">자동 새로고침 주기</string>
 
 
@@ -52,11 +53,13 @@
     <string name="error_reason_404">1. 택배사가 물품 배송을 시작하기 전\n2. 잘못 된 운송장 번호</string>
     <string name="error_reason_500">1. 일시적인 서버 오류</string>
 
-    <string name="dialog_allow_noti_help_allow_first">앱이 알림 영역에 접근할 수 있으면 운송장번호를 자동으로 등록할 수 있어요.\n허용하려면 아래 확인 버튼을 눌러주세요.\n\n앱은 절대 운송장 외의 정보에 접근하거나 정보를 기기 밖으로 전달하지 않아요.</string>
-    <string name="dialog_allow_noti_help_allow">운송장을 자동으로 등록하기 위해 앱이 알림에 접근할 수 있도록 권한을 허용해주세요.\n\n앱은 절대 운송장 외의 정보에 접근하거나 정보를 기기 밖으로 전달하지 않아요.</string>
-    <string name="dialog_allow_noti_help_reject">위와 같은 팝업이 나오면, 앱의 알림 접근 권한을 허용 안 됨으로 조정해 주세요.\n\n이후, 앱은 더 이상 운송장 번호를 자동으로 등록하지 않아요.</string>
-    <string name="dialog_get_noti_help_allow">운송장이 자동으로 등록 될 때, 알림으로 안내드려요.</string>
-    <string name="dialog_get_noti_help_reject">운송장이 자동으로 등록 될 때, 더 이상 알림으로 안내드리지 않아요.</string>
+    <string name="dialog_noti_permission_allow_first">앱이 알림 영역에 접근할 수 있으면 운송장번호를 자동으로 등록할 수 있어요.\n허용하려면 아래 확인 버튼을 눌러주세요.\n\n앱은 절대 운송장 외의 정보에 접근하거나 정보를 기기 밖으로 전달하지 않아요.</string>
+    <string name="dialog_noti_permission_allow">운송장을 자동으로 등록하기 위해 앱이 알림에 접근할 수 있도록 권한을 허용해주세요.\n\n앱은 절대 운송장 외의 정보에 접근하거나 정보를 기기 밖으로 전달하지 않아요.</string>
+    <string name="dialog_noti_permission_reject">위와 같은 팝업이 나오면, 앱의 알림 접근 권한을 허용 안 됨으로 조정해 주세요.\n\n이후, 앱은 더 이상 운송장 번호를 자동으로 등록하지 않아요.</string>
+    <string name="dialog_noti_when_auto_register_allow">운송장이 자동으로 등록 될 때, 알림으로 안내드려요.</string>
+    <string name="dialog_noti_when_auto_register_reject">운송장이 자동으로 등록 될 때, 더 이상 알림으로 안내드리지 않아요.</string>
+    <string name="dialog_noti_when_parcel_refresh_allow">운송장이 새로고침 될 때, 알림으로 안내드려요.</string>
+    <string name="dialog_noti_when_parcel_refresh_reject">운송장이 새로고침 될 때, 더 이상 알림으로 안내드리지 않아요.</string>
     <string name="dialog_start_noti_fail_form">알림에 택배사 이름과, 운송장 번호가 있어야지 앱이 알림을 인식 할 수 있어요.\n\n그럼에도 인식하지 못한다면, 인식하지 못하는 알림메세지를 개발자에게 전달해서 함께 앱을 개선할 수 있어요.\n\n개발자에게 알림을 공유하시겠어요?</string>
 
     <string name="tutorial_msg_1">여기에선 운송장 정보를 직접 입력해서 수동으로 추가할 수 있어요.</string>
@@ -90,5 +93,6 @@
     <string name="desc_noti_get">운송장이 알림을 통해 자동으로 등록 될 때 알림을 수신할 지 여부를 정할 수 있어요.</string>
     <string name="desc_noti_fail">인식하지 못하는 알림이 있으면 해당 정보를 개발자에게 공유하여 인식할 수 있도록 앱을 개선할 수 있어요.</string>
     <string name="desc_auto_refresh">운송장을 일정 시간마다 자동으로 새로고침 할 지 여부를 설정할 수 있어요.</string>
+    <string name="desc_parcel_refresh_receive_noti">운송장 자동 새로고침 시 알림을 수신할 지 여부를 설정할 수 있어요.</string>
 
 </resources>
